--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,10 @@
 
+eureka:
+ instance:
+  prefer-ip-address: true
+client:
+ fetch-registry: true
+ register-with-eureka: true
+
+# Eureka server URL (where your ServiceRegistry runs)
+service-url.defaultZone: http://localhost:8761/eureka/
