--- a/application.yml
+++ b/application.yml
@@ -5,6 +5,5 @@ eureka:
 client:
  fetch-registry: true
  register-with-eureka: true
-
-# Eureka server URL (where your ServiceRegistry runs)
- service-url.defaultZone: http://localhost:8761/eureka/
+ service-url:
+  defaultZone: http://localhost:8761/eureka/
